Lesson 11: Add checkout (web & api))
