# merch_shop/api-docs.json
@@ -359,6 +359,77 @@
                 }
             }
         },
+        "\/api\/order\/store": {
+            "post": {
+                "tags": [
+                    "orders"
+                ],
+                "summary": "send new order",
+                "requestBody": {
+                    "description": "Store new order",
+                    "content": {
+                        "application\/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "customer_name": {
+                                        "type": "string"
+                                    },
+                                    "customer_email": {
+                                        "type": "string"
+                                    },
+                                    "delivery_type": {
+                                        "type": "integer",
+                                        "example": "courier OR pickup"
+                                    },
+                                    "payment_method": {
+                                        "type": "integer",
+                                        "example": "cash OR card"
+                                    },
+                                    "delivery_address": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "object",
+                                            "properties": {
+                                                "city": {
+                                                    "type": "string"
+                                                },
+                                                "street": {
+                                                    "type": "string"
+                                                },
+                                                "house": {
+                                                    "type": "string"
+                                                },
+                                                "apartment": {
+                                                    "type": "integer",
+                                                    "nullable": true
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "$ref": "#\/components\/schemas\/Order"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "cart is empty"
+                    }
+                }
+            }
+        },
         "\/api\/news": {
             "get": {
                 "tags": [
@@ -632,6 +703,24 @@
     },
     "components": {
         "schemas": {
+            "Address": {
+                "type": "object",
+                "properties": {
+                    "city": {
+                        "type": "string"
+                    },
+                    "street": {
+                        "type": "string"
+                    },
+                    "house": {
+                        "type": "string"
+                    },
+                    "apartment": {
+                        "type": "integer",
+                        "nullable": true
+                    }
+                }
+            },
             "Cart": {
                 "type": "object",
                 "properties": {
@@ -739,6 +828,26 @@
                     "published_at": {
                         "format": "date-time",
                         "type": "string"
+                    }
+                }
+            },
+            "Order": {
+                "type": "object",
+                "properties": {
+                    "customer_name": {
+                        "type": "string"
+                    },
+                    "customer_email": {
+                        "type": "string"
+                    },
+                    "delivery_type": {
+                        "type": "integer"
+                    },
+                    "payment_method": {
+                        "type": "integer"
+                    },
+                    "address": {
+                        "$ref": "#\/components\/schemas\/Address"
                     }
                 }
             },
